syntax = "proto3";

package greet;

option go_package = "github.com/ankit-sonchhtra/go-grpc/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc GreetMany(GreetRequest) returns (stream GreetResponse);
}